charts/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  clusterIP: None
  ports:
    - port: 9092
  selector:
    app: kafka
